[workspace]
members = [
    "bpf-recorder",
    "bpf-ring-buffer",
    "ebpf-kern",
    "ebpf-kern/macros",
    "ebpf-user",
    "ebpf-user/macros",
    "mina-recorder",
    "mina-aggregator",
    "radiation",
    "radiation/macros",
    "tester",
    "mina-ipc",
    "simulator",
    "topology-tool",
]
resolver = "2"
