[package]
name = "bpf-recorder"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "MIT"

[lib]
name = "bpf_recorder"
path = "src/lib.rs"

[[bin]]
name = "bpf-recorder-kern"
path = "src/main.rs"
required-features = ["kern"]

[[bin]]
name = "bpf-recorder"
path = "src/main.rs"
required-features = ["user"]

[dependencies]
ebpf-kern = { workspace = true, optional = true }
typenum = { workspace = true, optional = true }
ebpf-user = { workspace = true, optional = true }
ctrlc = { workspace = true, optional = true }
log = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
libbpf-sys = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
network-types = { workspace = true, optional = true }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# local
bpf-ring-buffer = { workspace = true, optional = true }
mina-recorder = { workspace = true, optional = true }
simulator = { workspace = true, optional = true }

[features]
default = ["user"]
kern = ["ebpf-kern/macros", "typenum", "network-types"]
user = [
    "ebpf-user/macros",
    "ctrlc/termination",
    "log",
    "env_logger",
    "hex",
    "bpf-ring-buffer",
    "mina-recorder",
    "libbpf-sys",
    "libc",
    "serde",
    "serde_json",
    "reqwest",
    "simulator",
]
client = []