[package]
name = "ebpf-user"
version = "0.2.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "User space wrapper for libbpf"
repository = "https://github.com/vlad9486/ebpf-tools"

[dependencies]
libbpf-sys = { workspace = true }
cty = { workspace = true }
errno = { workspace = true }
ebpf-user-macros = { workspace = true, optional = true }

[features]
macros = ["ebpf-user-macros"]
