[package]
name = "mina-aggregator"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "MIT"

[dependencies]
env_logger = { workspace = true }
ctrlc = { workspace = true }

tokio = { workspace = true }
warp = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
radiation = { workspace = true }

libp2p-core = { workspace = true }

mina-recorder = { workspace = true }