[package]
name = "mina-recorder"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2021"
rust-version = "1.65.0"
license = "MIT"

[[bin]]
name = "mina-viewer"
path = "src/bin/mina-viewer.rs"

[build-dependencies]
prost-build = { workspace = true }
capnpc = { workspace = true }

[dependencies]
log = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
time = { workspace = true }
unsigned-varint = { workspace = true }
multiaddr = { workspace = true }
bitflags = { workspace = true }

prost = { workspace = true }
mina-p2p-messages = { workspace = true }
capnp = { workspace = true }

salsa20 = { workspace = true }
blake2 = { workspace = true }
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
vru-noise = { workspace = true }
sha3 = { workspace = true }

rocksdb = { workspace = true }
radiation = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }

tokio = { workspace = true }
warp = { workspace = true }
reqwest = { workspace = true }

libp2p-core = { workspace = true }
libp2p-identity = { workspace = true }

ebpf-user = { workspace = true }
libbpf-sys = { workspace = true }

# Obsolete dependencies for x86_64 only
[target.'cfg(target_arch = "x86_64")'.dependencies]
strace-parse = { workspace = true }
pete = { workspace = true }

[dev-dependencies]
temp-dir = { workspace = true }