[package]
name = "radiation"
version = "0.3.7"
edition = "2021"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
rust-version = "1.58.1"
license = "MIT"
description = "Convert Rust type into raw bytes and vice versa"

[dependencies]
nom = { workspace = true }
hex = { workspace = true }

tokio-util = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

pqcrypto-dilithium = { workspace = true, optional = true }
pqcrypto-traits = { workspace = true, optional = true }

radiation-macros = { workspace = true, optional = true }

[features]
default = ["derive", "std"]
derive = ["radiation-macros"]
nightly = []
std = []
codec = ["tokio-util/codec", "bytes"]
dilithium = ["pqcrypto-dilithium", "pqcrypto-traits"]
