[package]
name = "topology-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }

log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
