[package]
name = "mina-ipc"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
rust-version = "1.65.0"
license = "MIT"

[build-dependencies]
capnpc = { workspace = true }

[dependencies]
crc64 = { workspace = true }
mina-p2p-messages = { workspace = true }
capnp = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }

[features]
dump = []
