[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# system
structopt = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
signal-hook = { workspace = true }
nix = { workspace = true }

# utils
log = { workspace = true }
hex = { workspace = true }
roxmltree = { workspace = true }
time = { workspace = true }
rand = { workspace = true }

# graph
petgraph = { workspace = true }

# http
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
reqwest = { workspace = true }

# mina
mina-ipc = { workspace = true }
